# agent-exec

./: .cflx.jsonc  .gitignore  ACCEPTANCE_REPORT.json  AGENTS.md  Cargo.toml  Makefile  README.md  build.rs  prek.toml
.cflx/: acceptance-state.json
.github/workflows/: ci.yml  pages.yml  release.yml
.serena/: project.yml
.serena/cache/rust/: document_symbols.pkl  raw_document_symbols.pkl
.wt/: setup
docs/: agent-integrations.md  one-minute-demo.md
graphify-out/: .graphify_chunk_01.json  .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
openspec/changes/add-claude-skill-destinations/: tasks.md
openspec/changes/add-cli-aliases/: proposal.md  tasks.md
openspec/changes/add-create-start-lifecycle/: tasks.md
openspec/changes/add-delete-command/: proposal.md  tasks.md
openspec/changes/add-dynamic-job-completions/: proposal.md  tasks.md
openspec/changes/add-inline-output-compression/: proposal.md  tasks.md
openspec/changes/add-install-skills/: design.md  proposal.md  tasks.md
openspec/changes/add-job-finish-events/: proposal.md  tasks.md
openspec/changes/add-job-list-subcommand/: design.md  proposal.md  tasks.md
openspec/changes/add-job-tags/: proposal.md  tasks.md
openspec/changes/add-jobstore-auto-gc/: tasks.md
openspec/changes/add-list-command-field/: tasks.md
openspec/changes/add-list-state-filter/: design.md  proposal.md  tasks.md
openspec/changes/add-mcp-managed-jobs/: design.md  proposal.md  tasks.md
openspec/changes/add-notify-set-command/: design.md  tasks.md
openspec/changes/add-prefix-job-lookup/: tasks.md
openspec/changes/add-release-distribution/: proposal.md  tasks.md
openspec/changes/add-restart-job/: design.md  proposal.md  tasks.md
openspec/changes/add-rtk-compression-routing/: design.md  proposal.md  tasks.md
openspec/changes/add-rtk-container-gh-cloud-compression/: proposal.md  tasks.md
openspec/changes/add-rtk-git-compression/: design.md  proposal.md  tasks.md
openspec/changes/add-rtk-js-python-go-compression/: proposal.md  tasks.md
openspec/changes/add-rtk-rust-test-compression/: design.md  proposal.md  tasks.md
openspec/changes/add-rtk-system-log-json-compression/: proposal.md  tasks.md
openspec/changes/add-run-job-stdin-input/: tasks.md
openspec/changes/add-run-tail-metrics/: proposal.md  tasks.md
openspec/changes/add-run-wait/: design.md  proposal.md  tasks.md
openspec/changes/add-schema-command/: design.md  tasks.md
openspec/changes/add-serve-subcommand/: tasks.md
openspec/changes/add-shell-completions/: proposal.md  tasks.md
openspec/changes/add-user-site/: design.md  proposal.md  tasks.md
openspec/changes/add-version-flag/: tasks.md
openspec/changes/add-yaml-output/: tasks.md
openspec/changes/adopt-hash-like-job-ids/: tasks.md
openspec/changes/align-create-run-definition-options/: design.md  proposal.md  tasks.md
schema/: agent-exec.schema.json
scripts/: release-macos.sh  validate-site.py
site/: index.html
site/assets/: site.css
site/docs/: cli.html  index.html  install.html  integrations.html  lifecycle.html  mcp-http.html  output-contracts.html  quick-start.html  release-verification.html  troubleshooting.html
skills/agent-exec/: SKILL.md
src/: completions.rs  compress.rs  config.rs  create.rs  delete.rs  gc.rs  install_skills.rs  jobstore.rs  kill.rs  lib.rs  list.rs  main.rs  mcp.rs  notify.rs  restart.rs  run.rs  schema.rs  schema_cmd.rs  serve.rs  skills.rs  start.rs  status.rs  tag.rs  tail.rs  wait.rs
src/compress/: generic.rs  language.rs  mod.rs  route.rs  util.rs
tests/: integration.rs  mcp_integration.rs  serve_integration.rs  test_validate_site.py
tests/support/: mod.rs
(+426 files in other folders)
