[package]
name = "agent-exec"
version = "0.1.0"
edition = "2024"

# crates.io metadata
authors = ["tumf <tumf@users.noreply.github.com>"]
license = "MIT"
description = "Non-interactive agent job runner. Runs commands as background jobs and returns structured JSON on stdout."
readme = "README.md"
repository = "https://github.com/tumf/agent-exec"
homepage = "https://github.com/tumf/agent-exec"
documentation = "https://docs.rs/agent-exec"
keywords = ["agent", "job", "runner", "cli", "json"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "/src/**",
    "/skills/**",
    "/schema/**",
    "/tests/**",
    "/build.rs",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
]

[[bin]]
name = "agent-exec"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
ulid = "1"
libc = "0.2"
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
] }

[dev-dependencies]
tempfile = "3"
