[package]
name = "agent-exec"
version = "0.2.26"
edition = "2024"

# crates.io metadata
authors = ["tumf <tumf@users.noreply.github.com>"]
license = "MIT"
description = "Non-interactive agent job runner. Runs commands as background jobs and returns structured JSON on stdout."
readme = "README.md"
repository = "https://github.com/tumf/agent-exec"
homepage = "https://github.com/tumf/agent-exec"
documentation = "https://docs.rs/agent-exec"
keywords = ["agent", "job", "runner", "cli", "json"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "/src/**",
    "/skills/**",
    "/schema/**",
    "/tests/**",
    "/build.rs",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
]

[[bin]]
name = "agent-exec"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
directories = "5"
toml = { version = "0.8", default-features = false, features = ["parse"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
ulid = "1"
libc = "0.2"
tempfile = "3"
regex = "1"
rand = "0.8"
rmcp = { version = "0.8", features = ["server", "transport-io", "macros"] }
schemars = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
] }

[dev-dependencies]
tempfile = "3"
serde_yaml = "0.9"
jsonschema = "0.40"
